# voxelforge

./: .gitignore  .readthedocs.yaml  BUILD.md  CLEANBUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  requirements.in  setup.py  test_voxelforge.py
VoxelForge/: __init__.py  core.py  main.cpp  octree.cpp  octree.h  voxel.cpp  voxel.h
docs/: Doxyfile
docs/_build/doctrees/: api_reference.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  api_reference.html  examples.html  faq.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api_reference.rst.txt  faq.rst.txt  index.rst.txt  usage.rst.txt
docs/_build/latex/: voxelforge.aux  voxelforge.fdb_latexmk  voxelforge.fls  voxelforge.idx  voxelforge.ilg  voxelforge.ind  voxelforge.out  voxelforge.tex  voxelforge.toc
docs/source/: api_reference.rst  conf.py  examples.rst  installation.rst
docs/source/_static/: custom.css
docs/source/examples/: basic_voxel_manipulation.py  octree_usage.py
doxygen/xml/: classOctree.xml  classOctreeInternalNode.xml  classOctreeLeafNode.xml  classOctreeNode.xml  classVoxel.xml  classVoxelGrid.xml  dir_37227dd2487b3f78176f8bb2ed6568be.xml  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.xml  dir_72fea298333a065cd07fb7b89ca74fce.xml  dir_898bc6a100563898647931cb15fae06c.xml  index.xml  main_8cpp.xml  octree_8cpp.xml  octree_8h.xml  voxel_8cpp.xml  voxel_8h.xml
tests/: README.md  test_addvoxel.py  test_core.py  test_voxel_id.py  test_voxelforge.py
